--- a/style/style.css
+++ b/style/style.css
@@ -20,6 +20,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 200px;
 }
 /* nav related style  */
 .nav-title{
@@ -38,4 +39,18 @@ nav li{
 nav a{
     text-decoration: none;
     color: #474774;
+}
+/* header related style  */
+.header{
+    background-color: antiquewhite;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+
+}
+.banner .profile-photo{
+    width: 500px;
+
 }
