--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,18 @@
     font-weight: 700;
     padding: 15px 35px;
     }
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+
+}
+.section-description{
+    color: #474774;
+    text-align: center;
+    font-size: 18px;
+}
 /* nav related style  */
 nav{
     display: flex;
@@ -43,14 +55,43 @@ nav a{
 /* header related style  */
 .header{
     background-color: antiquewhite;
+    background-image: url("../images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
-
+    justify-content: space-between;
+}
+.banner-content{
+    max-width: 500px;
 }
 .banner .profile-photo{
     width: 500px;
 
+}
+.banner-greeting{
+    font-size: 45px;
+    color: #474774;
+    margin-bottom: 0;
+}
+.banner-title{
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+
+
+}
+/* main section style  */
+
+/* about section style  */
+.about{
+    padding: 130px;
+    border-radius: 1px;
+    background: #fff8f3;
+    margin: 130px;
+    
 }
